# acm

./: A.cpp  B.cpp  CC.cpp  CMakeLists.txt  main.cpp  main1.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  test.cpp  w.txt
MODEL/: Fast_rw.cpp  bigint.cpp  function.cpp
MODEL/DP/: SOSdp.cpp
MODEL/Data_Structure/: Cartesian_tree.cpp  Motonic_Queues.cpp  Tree_chain_splitting.cpp  tree_array.cpp
MODEL/Data_Structure/Persistable_data_structures/: Chair_tree.cpp  Mex_segtree.cpp
MODEL/Data_Structure/SegmentTree/: LazySegmentTree_NotRecursion.cpp  Scan_line.cpp  SegmentTree.cpp  SegmentTree_NotRecursion.cpp  atcoder.cpp
MODEL/Data_Structure/SegmentTree/jls/: SegmentTree.cpp
MODEL/Data_Structure/Tree_Partition/: Static_point_Partition.cpp
MODEL/Data_Structure/Tree_Partition/Static/: P3806.cpp  P4178.cpp
MODEL/Graph/: Bellman_Ford.cpp  Kruskal.cpp  LCA.cpp  SPFA.cpp  Tree_Barycenter.cpp  dijkstra.cpp  prim.cpp
MODEL/Math/: FFT.cpp  Gauss.cpp  combinatorics.cpp  divisors.cpp  extended_euclid.cpp  inverse.cpp  pollard_rho.cpp  sieve_prime_number.cpp
MODEL/Sort/: count.cpp
MODEL/String/: ACAM.cpp  Hash.cpp  SA.cpp  dfa.cpp  kmp.cpp  trie.cpp  z_kmp.cpp
Problem/Binary_Search/Answer/: CF1920F1.cpp  CF1968G1.cpp  CF1993D.cpp  luoguP10059.cpp
Problem/Binary_Search/Middle/: 2022ICPC南京D.cpp  2024ICPC网络赛G.cpp
Problem/Constructive_algorithms/: CF1823D.cpp
Problem/Constructive_algorithms/Binary/: CF1965B.cpp  CF1981C.cpp
Problem/Constructive_algorithms/Thinking/: CF1968E.cpp
Problem/DP/Pressure/: abc359D.cpp
Problem/DP/SOSdp/: CF1995D.cpp  CF383E.cpp  CF449D.cpp  COCI_2011-2012_6_KOSARE.cpp  牛客多校2023第七场I.cpp
Problem/DP/interval_dp/: 牛客练习赛122D.cpp
Problem/DP/knapsack_dp/: 2022ICPC杭州D.cpp  CF1637D.cpp
Problem/DP/thinking_dp/: 1875D.cpp  CF1681D.cpp  CF1858D.cpp  CF1870E.cpp  CF1920E.cpp  CF1969C.cpp  CF1977C.cpp  CF1994G.cpp  CF2027D2.cpp  CFICPCMirror2023_9_4D.cpp  abc366f.cpp  牛客多校2023第二场K.cpp  牛客练习赛125D.cpp
Problem/DP/thinking_dp/easy/: CF2119D.cpp  CF2122E.cpp
Problem/DP/thinking_dp/middle/: CF2028D.cpp  CF2124F2.cpp
Problem/DP/tree_dp/: CF1988D.cpp  P2014.cpp
Problem/DP/tree_dp/observe/: CF2133E.cpp
Problem/DSU/: CF741C.cpp  abc361G.cpp  poj1182.cpp
Problem/Data_Structure/Cartesian_tree/: CF1988E.cpp  CF1998E1.cpp  CF1998E2.cpp
Problem/Data_Structure/Persistable_data_structures/: P4137.cpp
Problem/Data_Structure/Scan_line/: 2023CCPC桂林.cpp  CF1969E.cpp  P1972.cpp  P2163.cpp  牛客练习赛122E.cpp
Problem/Data_Structure/SegmentTree/nowcoder_practice126D/: me.cpp  牛客练习赛126D.cpp
Problem/Data_Structure/xor_trie/: CF9083F.cpp
Problem/Enumerate/: CF1986G2.cpp  P9118.cpp  abc360G.cpp
Problem/Games/: CF1527B2.cpp  CF1537D.cpp  CF1965A.cpp
Problem/Games/Nim/: hdu2509.cpp
Problem/Games/SG/: CF2004E.cpp  P3185.cpp  hdu1729.cpp
Problem/Games/Tree_Hackenbush/: hdu3094.cpp
Problem/Graph/: CF1824B1.cpp  CF1856E2.cpp  P1073.cpp
Problem/Graph/Binary_graph/: P3386.cpp
Problem/Graph/Dijkstra/: CF2000G.cpp
Problem/Graph/Floyd/: P1119.cpp
Problem/Graph/Span_Trees/Dfs_Span/: CF1994F.cpp  P10298.cpp
Problem/Graph/Thinking/: 2022ICPC西安L.cpp  CF1975D.cpp
Problem/Graph/Tree/: 牛客练习赛127D.cpp
Problem/Graph/Tree/Tree_Partition/: P2056.cpp
Problem/Graph/Tree/Tree_Partition/P2664/: P2664_fast.cpp  p2664.cpp
Problem/Graph/Tree/Virtual_Tree/: abc359G.cpp
Problem/Graph/Tree/Virtual_Tree/P2495/: P2495.cpp  P2495_fast.cpp
Problem/Hash/: CF1977D.cpp
Problem/Interactive/Graph/: CF1991E.cpp
Problem/Interactive/Math/: CF1973D.cpp
Problem/MOCK/: 2020ICPC银川K.cpp  2022ICPC沈阳F.cpp  2022ICPC沈阳L.cpp
Problem/Math/: 2023ICPC西安F.cpp  CF1972D2.cpp  CF1983E.cpp  CF2039E.cpp  CFICPCMirror2023_9_4L.cpp  hdu7275.cpp
Problem/Math/Catalan/: CF2025E.cpp
Problem/Math/Combinatorics/: CF1957C.cpp
Problem/Math/Gauss/: poj1681.cpp
Problem/Math/Generating_Function/: hdu1028.cpp  hdu11521.cpp  hdu2065.cpp
Problem/Math/Integrative_functions/: CF757E.cpp  nowcoder23047.cpp
Problem/Math/Inverse/: 百度之星2024跑步.cpp
Problem/Math/Linear_basis/: 2024CCPC网络赛J.cpp  P3182.cpp  hdu3949.cpp
Problem/Math/Pigeonhole/: CF1994D.cpp
Problem/Math/Repulsion/: P5505.cpp
Problem/Math/Repulsion/dp/: P1450.cpp  P3160.cpp  P5664.cpp
Problem/Math/expectation/: abc360E.cpp
Problem/Math/mobius/: abc162E.cpp  agc083C.cpp  nowcoder14648.cpp
Problem/Observe/: CF2122D.cpp  CF2124G.cpp  CF2127E.cpp
Problem/RMQ/: nowcoder275626.cpp
Problem/Sqrt_Partition/: CF1968G2.cpp  CF1997E.cpp
Problem/String/: CF1984D.cpp
Problem/String/AC_automata/: P5357.cpp
Problem/String/Kmp/: ICPC_Latin_American_L.cpp
Problem/Thinking/: 2022ICPC南京A.cpp  2022ICPC杭州K.cpp  CF1870D.cpp  CF1967C.cpp  CF1969D.cpp  CF1973E.cpp  CFICPCMirror2023_9_4G.cpp  CFICPCMirror2023_9_4H.cpp  P10059.cpp  luoguU397746.cpp  牛客练习赛122E.cpp
Problem/Thinking/Easy/: 2022icpc网络赛第一场C.cpp  CF1980E.cpp  CF1990C.cpp  CF1994C.cpp  CF1995B2.cpp  CF1996D.cpp  CF1998D.cpp  CF2007D.cpp  CF2122C.cpp  CF2124E.cpp  abc414F.cpp
Problem/Thinking/Guess/: CF1893B.cpp  CF1965C.cpp  CF1973C.cpp  CF1975C.cpp  CF1983D.cpp
Problem/Thinking/Middle/: 2022ICPC第1场网络赛A.cpp  2022ICPC网络赛第一场L.cpp  CF1307D.cpp  CF1973E.cpp  CF1976D.cpp  CF1994E.cpp  CF2025F.cpp  CF2125E.cpp  CF2128F.cpp
Problem/XOR/: CF1975E.cpp  牛客多校2023第七场C.cpp
