cmake_minimum_required(VERSION 3.21)
project(untitled)
set(CMAKE_CXX_STANDARD 23)
add_executable(main main.cpp )
add_executable(hdu7275 Problem/Math/hdu7275.cpp)
add_executable(divisors MODEL/Math/divisors.cpp)
add_executable(extended_euclid MODEL/Math/extended_euclid.cpp)
add_executable(sieve_prime_number MODEL/Math/sieve_prime_number.cpp)
add_executable(inverse MODEL/Math/inverse.cpp)
add_executable(kmp MODEL/String/kmp.cpp)
add_executable(dfa MODEL/String/dfa.cpp)
add_executable(z_kmp MODEL/String/z_kmp.cpp)
add_executable(trie MODEL/String/trie.cpp)
add_executable(SOSdp MODEL/DP/SOSdp.cpp)
add_executable(AC_automata MODEL/String/ACAM.cpp)
add_executable(CF449D Problem/DP/SOSdp/CF449D.cpp)
add_executable(CF383E Problem/DP/SOSdp/CF383E.cpp)
add_executable(COCI_2011-20126_KOSARE Problem/DP/SOSdp/COCI_2011-2012_6_KOSARE.cpp)
add_executable(hdu1028 Problem/Math/Generating_Function/hdu1028.cpp)
add_executable(hdu11521 Problem/Math/Generating_Function/hdu11521.cpp)
add_executable(CF1858D Problem/DP/thinking_dp/CF1858D.cpp)
add_executable(CF1637D Problem/DP/knapsack_dp/CF1637D.cpp)
add_executable(CF1856E2 Problem/Graph/CF1856E2.cpp)
add_executable(P5357 Problem/String/AC_automata/P5357.cpp)
add_executable(function MODEL/function.cpp)
add_executable(hdu2065 Problem/Math/Generating_Function/hdu2065.cpp)
add_executable(P5664 Problem/Math/Repulsion/dp/P5664.cpp)
add_executable(P1450 Problem/Math/Repulsion/dp/P1450.cpp)
add_executable(Chair_tree MODEL/Data_Structure/Persistable_data_structures/Chair_tree.cpp)
add_executable(P5505 Problem/Math/Repulsion/P5505.cpp)
add_executable(SA MODEL/String/SA.cpp)
add_executable(count MODEL/Sort/count.cpp)
add_executable(FFT MODEL/Math/FFT.cpp)
add_executable(CF1681 Problem/DP/thinking_dp/CF1681D.cpp)
add_executable(CF1824B1 Problem/Graph/CF1824B1.cpp)
add_executable(CF1823D Problem/Constructive_algorithms/CF1823D.cpp)
add_executable(pollard_rho MODEL/Math/pollard_rho.cpp)
add_executable(CFICPCMirror2023_9_4 Problem/Thinking/CFICPCMirror2023_9_4H.cpp)
add_executable(CFICPCMirror2023_9_4G Problem/Thinking/CFICPCMirror2023_9_4G.cpp)
add_executable(CFICPCMirror2023_9_4D Problem/DP/thinking_dp/CFICPCMirror2023_9_4D.cpp)
add_executable(SegmentTree MODEL/Data_Structure/SegmentTree/jls/SegmentTree.cpp)
add_executable(CFICPCMirror2023_9_4L Problem/Math/CFICPCMirror2023_9_4L.cpp)
add_executable(dijkstra MODEL/Graph/dijkstra.cpp)
add_executable(Bellman_Ford MODEL/Graph/Bellman_Ford.cpp)
add_executable(SPFA MODEL/Graph/SPFA.cpp)
add_executable(prim MODEL/Graph/prim.cpp)
add_executable(Kruskal MODEL/Graph/Kruskal.cpp)
add_executable(P1073 Problem/Graph/P1073.cpp)
add_executable(P1119 Problem/Graph/Floyd/P1119.cpp)
add_executable(CF1870 Problem/Thinking/CF1870D.cpp)
add_executable(CF1870E Problem/DP/thinking_dp/CF1870E.cpp)
add_executable(bigint MODEL/bigint.cpp)
add_executable(P2014 Problem/DP/tree_dp/P2014.cpp)
add_executable(1875D Problem/DP/thinking_dp/1875D.cpp)
add_executable(tree_array MODEL/Data_Structure/tree_array.cpp)
add_executable(Tree_chain_splitting MODEL/Data_Structure/Tree_chain_splitting.cpp)
add_executable(Tree_Barycenter MODEL/Graph/Tree_Barycenter.cpp)
add_executable(Static_point_Partition MODEL/Data_Structure/Tree_Partition/Static_point_Partition.cpp)
add_executable(P3806 MODEL/Data_Structure/Tree_Partition/Static/P3806.cpp)
add_executable(P4178 MODEL/Data_Structure/Tree_Partition/Static/P4178.cpp)
add_executable(Fast_rw MODEL/Fast_rw.cpp)
add_executable(Motonic_Queues MODEL/Data_Structure/Motonic_Queues.cpp)
add_executable(P10059 Problem/Thinking/Middle/P10059.cpp)
add_executable(P2664 Problem/Graph/Tree/Tree_Partition/P2664/P2664_fast.cpp)
add_executable(CF1920E Problem/DP/thinking_dp/CF1920E.cpp)
add_executable(CF1920F1 Problem/Binary_Search/Answer/CF1920F1.cpp)
add_executable(P2056 Problem/Graph/Tree/Tree_Partition/P2056.cpp)
add_executable(p26641 Problem/Graph/Tree/Tree_Partition/P2664/p2664.cpp)
add_executable(P2495 Problem/Graph/Tree/Virtual_Tree/P2495/P2495.cpp)
add_executable(P2495_fast Problem/Graph/Tree/Virtual_Tree/P2495/P2495_fast.cpp)
add_executable(SegmentTree_NotRecursion MODEL/Data_Structure/SegmentTree/SegmentTree_NotRecursion.cpp)
add_executable(Scan_line MODEL/Data_Structure/SegmentTree/Scan_line.cpp)
add_executable(CF1972D2 Problem/Math/CF1972D2.cpp)
add_executable(CF1969C Problem/DP/thinking_dp/CF1969C.cpp)
add_executable(CF1969D Problem/Thinking/CF1969D.cpp)
add_executable(CF1969E Problem/Data_Structure/Scan_line/CF1969E.cpp)
add_executable(LazySegmentTree_NotRecursion MODEL/Data_Structure/SegmentTree/LazySegmentTree_NotRecursion.cpp)
add_executable(CF1965A Problem/Games/CF1965A.cpp)
add_executable(CF1968G1 Problem/Binary_Search/Answer/CF1968G1.cpp)
add_executable(P2163 Problem/Data_Structure/Scan_line/P2163.cpp)
add_executable(CF1968G2 Problem/Sqrt_Partition/CF1968G2.cpp)
add_executable(CF1973E Problem/Thinking/Middle/CF1973E.cpp)
add_executable(CF1977D Problem/Hash/CF1977D.cpp)
add_executable(CF1957C Problem/Math/Combinatorics/CF1957C.cpp)
add_executable(CF1981C Problem/Constructive_algorithms/Binary/CF1981C.cpp)
add_executable(abc360E Problem/Math/expectation/abc360E.cpp)
add_executable(abc360G Problem/Enumerate/abc360G.cpp)
add_executable(CF1893B Problem/Thinking/Guess/CF1893B.cpp)
add_executable(CF1983D Problem/Thinking/Guess/CF1983D.cpp)
add_executable(CF1983E Problem/Math/CF1983E.cpp)
add_executable(CF9083F Problem/Data_Structure/xor_trie/CF9083F.cpp)
add_executable(abc361G Problem/DSU/abc361G.cpp)
add_executable(CF1986G2 Problem/Enumerate/CF1986G2.cpp)
add_executable(CF1988D Problem/DP/tree_dp/CF1988D.cpp)
add_executable(P3160 Problem/Math/Repulsion/dp/P3160.cpp)
add_executable(CF1994C Problem/Thinking/Easy/CF1994C.cpp)
add_executable(CF1994D Problem/Math/Pigeonhole/CF1994D.cpp)
add_executable(CF1994E Problem/Thinking/Middle/CF1994E.cpp)
add_executable(CF2039E Problem/Math/CF2039E.cpp)
add_executable(CF2123G Problem/Thinking/Easy/CF2123G.cpp)
add_executable(CF2119E Problem/Thinking/Easy/CF2119E.cpp)
add_executable(CF2119D Problem/DP/thinking_dp/easy/CF2119D.cpp)
add_executable(abc414F Problem/Thinking/Easy/abc414F.cpp)
add_executable(CF2122C Problem/Thinking/Easy/CF2122C.cpp)
add_executable(CF2122D Problem/Observe/CF2122D.cpp)
add_executable(CF2127E Problem/Observe/CF2127E.cpp)
add_executable(CF2122E Problem/DP/thinking_dp/easy/CF2122E.cpp)